classDiagram

class Walkable {
 <<interface>>
 walk()
}

class Flyable {
 <<interface>>
 fly()
}

class Swimmable {
 <<interface>>
 swim()
}

class Photosynthetic {
 <<interface>>
 photosynthesize()
}

class TropismResponsive {
 <<interface>>
 respondToEnvironment()
}

class Dog
class Parrot
class Trout
class OakTree

Dog ..|> Walkable
Parrot ..|> Walkable
Parrot ..|> Flyable
Trout ..|> Swimmable

OakTree ..|> Photosynthetic
OakTree ..|> TropismResponsive